# tree-sitter-offload

./: .gitmodules  Cargo.toml  LICENSE  build.rs  rust-toolchain.toml
.github/workflows/: Build.yaml
src/: highlighting_lexer.rs  injections.rs  jni_utils.rs  language_registry.rs  lib.rs  predicates.rs  query.rs  ranges.rs  syntax_snapshot.rs
src/highlighting_lexer/: query.rs
src/syntax_snapshot/: jni_methods.rs
