[package]
name = "tree-sitter-offload"
version = "0.1.0"
edition = "2021"
include = ["/src", "/treesitter-include", "/tree-sitter-ng"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
tree-sitter = "0.24.7"
crossbeam-utils = "0.8.21"
streaming-iterator = "0.1"
# Using until OnceLock::get_or_try_init stabilized in std
once_cell = "1.20.2"
thiserror = "1.0"

[build-dependencies]
cc = "1.2"
